--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,3 +16,19 @@ steps:
     
 - task: PublishBuildArtifacts@1
 
+- task: AzureRmWebAppDeployment@3
+  inputs:
+    azureSubscription: '0eb69558-e884-48b4-b986-7e786929d757'
+    WebAppName: 'azurepipelinesampleapp'
+    DeployToSlotFlag: true
+    ResourceGroupName: 'MyAzurePipeline'
+    SlotName: staging
+
+- task: AzureAppServiceManage@0
+  inputs:
+    azureSubscription: '0eb69558-e884-48b4-b986-7e786929d757'
+    WebAppName: 'azurepipelinesampleapp'
+    ResourceGroupName: 'MyAzurePipeline'
+    SourceSlot: staging
+
+
