--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,4 +16,10 @@ steps:
     
 - task: PublishBuildArtifacts@1
 
+- task: DotNetCoreCLI@2
+  inputs:
+    command: publish
+    publishWebProjects: True
+    arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: True
 
